# covid-rs

./: .gitignore  Cargo.toml  conf.toml  epicurve.csv
analysis/: .gitignore  graph.py  prepare.py
covid-py/: Cargo.toml
covid-py/epirust/: __init__.py
covid-py/src/: lib.rs
covid-rs/: Cargo.toml
covid-rs/src/: agent.rs  iter.rs  lib.rs  pop.rs  pop_builder.rs  prelude.rs  reporter.rs  sampler.rs  simulation.rs
covid-rs/src/epidemic/: healthcare.rs  mod.rs  model.rs  params.rs  vaccines.rs  variants.rs
covid-rs/src/models/: mod.rs  seair.rs  seichar.rs  seir.rs  simple.rs  sir.rs
covid-rs/src/params/: bind.rs  bound_params.rs  concrete_seir.rs  constants.rs  epi_local_params.rs  epi_param_cached.rs  epi_params.rs  epi_params_clinical.rs  epi_params_full.rs  epi_params_min.rs  local_bind.rs  macros.rs  mod.rs  seir.rs  universal_seir.rs  vaccine_simple.rs
covid-rs/src/sim/: builder.rs  epicurve_reporter.rs  epicurve_tracker.rs  manager.rs  mod.rs  population.rs  reporter.rs  simulation.rs  state.rs
covid-rs/src/trackers/: epi_tracker.rs  mod.rs  table_tracker.rs  time_trackers.rs  tracker.rs  vaccine.rs
covid-rs/src/utils/: ascii_plot.rs  functions.rs  ma.rs  mod.rs  pid.rs  stats.rs
examples/: conf.toml
