[package]
name = "covid-py"
version = "0.1.0"
authors = ["Fábio Macêdo Mendes <fabiomacedomendes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "epirust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "^0.13.2", features = ["extension-module"] }
pythonize = "0.13.0"
covid = { path = "../covid-rs" }
paste = "1.0.5"
toml = "0.5"

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]